# mcp-fns-check

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  server.json
.github/workflows/: publish-mcp.yml
src/atomno_mcp_fns_check/: __init__.py  context.py  errors.py  schemas.py  server.py  validators.py
src/atomno_mcp_fns_check/data/: __init__.py  okved_2_dict.json  registries_seed.json
src/atomno_mcp_fns_check/db/: __init__.py  cache.py  registries.py
src/atomno_mcp_fns_check/scripts/: __init__.py  etl_registries.py
src/atomno_mcp_fns_check/sources/: __init__.py  efrsb.py  egrul.py  fssp.py  kad.py  pb_fns.py
src/atomno_mcp_fns_check/tools/: __init__.py  cards.py  check.py  contractor.py  directors_history.py  legal_status.py  okveds.py  red_flags.py
tests/: conftest.py  smoke_helpers.py  test_cache.py  test_cards.py  test_check_e2e.py  test_contractor.py  test_directors_history.py  test_efrsb.py  test_egrul_client.py  test_etl_registries.py  test_legal_status.py  test_okveds.py  test_red_flags.py  test_red_flags_extended.py  test_registries.py  test_smoke_archetypes.py  test_sources_fssp.py  test_sources_kad.py  test_sources_pb_fns.py  test_validators.py
tests/fixtures/: egrul_sber.json
